fix file misalignment bugs

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
 html,
 body {
 	width: 100%;
-	height: 100%;
-	background-color: red;
+	height: 100vh;
+	background-color: #3b7677 !important;
 }
 
 #root {
